@@ -2,7 +2,8 @@ ggplot2 1.0.1.9000
 ----------------------------------------------------------------
 
 * `geom_text()` gains `nudge_x` and `nudge_y` arguments to offset labels from
-  the x & y position (#1120)
+  the x & y position (#1120). `check_overlap = TRUE` provides a simple
+  resolution to label overplotting (#1039).
 
 * `geom_crossbar()` sets grouping correctly so you can display multiple
   crossbars on one plot. It also makes the default `fatten` argument a little
